--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Netherlands -- History'
 - !lcc 'DJ'
+- GITenberg
 title: Beknopte geschiedenis van het vaderland
 url: http://www.gutenberg.org/ebooks/37297
